[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/GemsIndicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/EnergyBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/UI/Energy.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.2421, 25.2145 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.8367, 26.5996 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 128, 576 )
z_index = 1
script = ExtResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( -6.98659, -70.9866 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.54063, -71.1353 )
scale = Vector2( 0.6, 0.6 )
shape = SubResource( 1 )

[node name="Player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -6.83794, -69.946 )
scale = Vector2( 0.6, 0.6 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -7.38885, -89.3672 )
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="EnergyBar" parent="." instance=ExtResource( 4 )]
margin_left = -236.835
margin_top = 21.9367
margin_right = -76.8353
margin_bottom = 38.9367

[node name="Energy" parent="." instance=ExtResource( 5 )]

[node name="GemsIndicator" parent="." instance=ExtResource( 3 )]
margin_left = -224.737
margin_top = -202.99
margin_right = -224.737
margin_bottom = -202.99
rect_scale = Vector2( 0.52, 0.519998 )
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
